<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:orderInCategory="1">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="always"/>
    </group>
    <group
        android:orderInCategory="2">
        <item
            android:id="@+id/menu_gists"
            android:icon="@drawable/ic_file"
            android:title="@string/gists"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_repos"
            android:icon="@drawable/ic_folder"
            android:title="@string/repositories"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_issues"
            android:icon="@drawable/ic_issues"
            android:title="@string/issues"
            app:showAsAction="always"/>
    </group>
    <group
        android:orderInCategory="3">
        <item
            android:id="@+id/menu_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/applications"
            app:showAsAction="always"/>
        <item
            android:id="@+id/menu_orgs"
            android:icon="@drawable/ic_orgs"
            android:title="@string/organisations"
            app:showAsAction="always"/>
    </group>

    <group
        android:orderInCategory="4">
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            app:showAsAction="always"/>
    </group>

</menu>