<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu_repos"
        android:title="@string/repositories"
        android:icon="@drawable/ic_folder"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search_menu_commits"
        android:title="@string/commits"
        android:icon="@drawable/ic_commits"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search_menu_issues"
        android:title="@string/issues"
        android:icon="@drawable/ic_issue_outline"
        app:showAsAction="always"/>
    <item
        android:id="@+id/search_menu_users"
        android:title="@string/users"
        android:icon="@drawable/ic_people"
        app:showAsAction="always"/>
</menu>