<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_readme"
        android:title="@string/readme"
        android:icon="@drawable/ic_explore"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_files"
        android:title="@string/files"
        android:icon="@drawable/ic_folder"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_repo_issues"
        android:title="@string/issues"
        android:icon="@drawable/ic_issue_outline"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_commits"
        android:title="@string/commits"
        android:icon="@drawable/ic_commits"
        app:showAsAction="always"/>

    <!--<item-->
        <!--android:id="@+id/pull_requests"-->
        <!--android:title="Pull Requests"-->
        <!--android:icon="@drawable/ic_pull_requests"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/menu_contributors"
        android:title="Contributors"
        android:icon="@drawable/ic_people"
        app:showAsAction="always"/>


</menu>