<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kovapss.gitmobile.view.repositories.detail.issues.RepositoryIssuesFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/repo_issues_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="@string/repo_opened_issues_tab"
            android:text="@string/opened" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tag="@string/repo_closed_issue_tag"
            android:text="@string/closed" />
    </android.support.design.widget.TabLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/repo_issues_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/repo_issues_tab_layout" />

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <include
        android:id="@+id/network_error_placeholder"
        layout="@layout/internet_error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:visibility="invisible" />

    <include
        android:id="@+id/empty_result_placeholder"
        layout="@layout/empty_result_placeholder"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:visibility="invisible" />
</RelativeLayout>
