<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.gists.create.CreateFileActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/filename_textinput_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/gist_filename_edit_text"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:hint="@string/file_name"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/file_extensions_textview"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:dropDownWidth="wrap_content"
        android:layout_alignStart="@id/filename_textinput_layout"
        android:hint="@string/extension"
        android:completionHint="Введите расширение"
        android:completionThreshold="1"
        android:layout_marginTop="8dp"
        android:layout_below="@id/filename_textinput_layout"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/file_content_input_layout"
        android:layout_width="match_parent"
        android:minHeight="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/file_extensions_textview"
        android:layout_alignStart="@id/filename_textinput_layout"
        app:errorEnabled="true"
        android:layout_marginEnd="8dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/file_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/gist_save_file_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/file_content_input_layout"/>

</RelativeLayout>
