<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/content_type"/>

    <Spinner
        android:id="@+id/content_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:layout_marginEnd="36dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:textSize="18sp"
        android:layout_marginTop="45dp"
        android:text="@string/sort"/>

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:text="@string/order"/>

    <Spinner
        android:id="@+id/order_spinner"
        android:layout_width="200dp"
        android:layout_marginEnd="36dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>